--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Art | Code</title>
   <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
-<body class="p-6 flex flex-col items-center font-mono">
+<body class="p-6 flex flex-col items-center font-mono min-h-screen bg-gradient-to-br from-gray-950 via-gray-900 to-gray-950">
 
   <h1 class="text-xl mb-4 text-center drop-shadow-[0_0_6px_#c0ffee]">Blending art and code</h1>
 
@@ -115,7 +116,7 @@ function renderProjects(projects) {
     loadProjects();
   </script>
 
-  <div class="mt-8 text-center text-sm text-[#88bbbb]">
+<footer class="fixed bottom-0 left-0 w-full text-center text-sm text-[#88bbbb] bg-gray-950/80 backdrop-blur-sm py-3">
 
     Source code for projects     <a href="https://github.com/Timmoth/Art" target="_blank" class="text-[#0ff] hover:underline">
       found on GitHub
@@ -123,7 +124,7 @@ function renderProjects(projects) {
     <a href="https://www.timmoth.com/" target="_blank" class="text-[#0ff] hover:underline">
       Tim Jones
     </a>
-  </div>
+</footer>
 
 </body>
 </html>
